--- a/search-com/search.html
+++ b/search-com/search.html
@@ -22,7 +22,9 @@
                 <i class="iconfont icon_sousuo1"></i>
             </div>
         </form>
-        <div class="nav_search_pannel"></div>
+        <div class="nav_search_pannel">
+            <div>热搜</div>
+        </div>
     </div>
     <script src="./search.js"></script>
 </body>
